Closed Bug 454477 Opened 16 years ago Closed 16 years ago

Fix "unhandled enumeration value" warnings in widget/

Categories

(Core :: Widget, defect)

x86
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: Swatinem, Assigned: Swatinem)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
Again: some bogus default cases to make gcc happy.
Attachment #337749 - Flags: superreview?(roc)
Attachment #337749 - Flags: review?(roc)
Same deal as in the other bug; I'd like to see some comments to explain why we don't need to handle other cases.
I added comments to explain why we don't handle other values. The ones which are handled are special cases and the default behavior should apply for all others.
Attachment #337749 - Attachment is obsolete: true
Attachment #338615 - Flags: superreview?(roc)
Attachment #338615 - Flags: review?(roc)
Attachment #337749 - Flags: superreview?(roc)
Attachment #337749 - Flags: review?(roc)
Attachment #338615 - Flags: superreview?(roc)
Attachment #338615 - Flags: superreview+
Attachment #338615 - Flags: review?(roc)
Attachment #338615 - Flags: review+
Keywords: checkin-needed
Comment on attachment 338615 [details] [diff] [review]
added comments
[Checkin: Comment 3]

http://hg.mozilla.org/mozilla-central/rev/6d975e9a14ea
Attachment #338615 - Attachment description: added comments → added comments [Checkin: Comment 3]
Severity: normal → minor
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: