Bug 454477 - Fix "unhandled enumeration value" warnings in widget/; r+sr=roc